--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ a{
 	background: #000000;
 	padding: 113px 0 84px;
 }
-.dgff{
+.doc{
 	max-width: 1184px;
     flex-wrap: wrap;
     margin: auto;
@@ -194,6 +194,7 @@ a{
 	line-height: 30px;
 	text-align: center;
 	color: #C0C0C0;	
+	margin-bottom: 42px;
 }
 .cent_con article{
 	max-width: 576px;
