add header position

--- a/css/style.css
+++ b/css/style.css
@@ -445,7 +445,7 @@ a{
 	font-size: 14px;
 	line-height: 20px;
 	letter-spacing: 2px;
-	text-tNepalransform: uppercase;
+	text-transform: uppercase;
 	color: #FFFFFF;		
 }
 .Nepal .description3 p{
